--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,5 +1,4 @@
 // New Way
-
 .badger{
     a{
         line-height: 23px;
@@ -13,7 +12,7 @@
 
 .footer__new{
 
-    background-color: #fcfaf2;
+    background-color: #f8fff9;
     position: relative;
     margin-top: 0px;
     color: #000;
@@ -43,7 +42,7 @@
                 span{
 
                     margin-left: 5px;
-                    color: #3a5a40;
+                    color: #009C3E;
                     
                 }
             }
