--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,5 +1,5 @@
 .button{
-    padding: 15px 18px;
+    padding: 15px 25px;
     width: max-content;
     font-size: 11px;
     font-weight: 600;
@@ -8,4 +8,10 @@
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
+
+    .arrowType{
+        display: flex;
+        gap: 15px;
+        align-items: center;
+    }
 }
