--- a/src/components/newsroom/newsroom.scss
+++ b/src/components/newsroom/newsroom.scss
@@ -1,17 +1,46 @@
-.title{
-    margin-bottom: 5px;
-}
-
 .blog{
     font-weight: 600;
-    font-size: 35px;
-    font-family: "Bebas Neue" !important;
+    font-size: 28px;
+    
 }
 
 .news{
 
     margin-top: 40px;
     gap: 30px;
+
+    &#main{
+        
+        flex-wrap: wrap;
+
+        .news__item{
+
+            min-width: 31%;
+            width: 31%;
+
+            .content__text{
+                p{
+                    font-size: 16px;
+                    line-height: 25px;
+                    height: max-content;
+                    margin-bottom: 0;
+                }
+                a{
+                    display: none;
+                }
+            }
+
+            &:hover{
+
+                .photo{
+                    img{
+                        scale: 1.09;
+                    }
+                }
+
+            }
+        }
+    }
 
     .news__item{
 
@@ -36,7 +65,7 @@
         }
 
         a{
-            color: #fb8b24;
+            color: #108a00;
             letter-spacing: 2px;
             text-transform: uppercase;
             font-size: 12px;
@@ -62,6 +91,7 @@
                 height: 100%;
                 width: 100%;
                 object-fit: cover;
+                transition: all 0.8s cubic-bezier(0.39, 0.01, 0.36, 0.9);
             }
         }
 
@@ -79,8 +109,7 @@
 }
 
 .newsroom{
-    padding-bottom: 50px;
-    margin: 30px 0;
+    padding-bottom: 80px;
     overflow-x: hidden;
 }
 
