--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,19 +1,42 @@
 .homepage{
 
-    position: relative;
-    background-color: #fffcf6;
-    height: 100vh;
+    .vidMate{
+        height: 800px;
+        overflow: hidden;
+        position: absolute;
+        width: 1200px;
+        right: 50px;
+        rotate: -20deg;
+        z-index: -1;
+        top: 00px;
+
+        video{
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+
+
+    .topPart{
+        position: relative;
+        width: 100%;
+        overflow: clip;
+    }
 
     .main__text{
+
         width: 700px;
-        padding-top: 100px;
+        padding: 70px 0;
+
+        span{
+            color: #108a00;
+        }
 
         h1{
-            font-size: 50px;
-            line-height: 65px;
-            letter-spacing: -.5px;
-            padding-top: 0px;
-            font-weight: 630;
+            font-size: 65px;
+            line-height: 72px;
+            letter-spacing: -1.5px;
         }
 
         p{
@@ -21,74 +44,9 @@
             line-height: 28px;
             width: 80%;
             margin: 50px 0;
-            margin-top: 30px;
-            color: #777;
+            color: #666;
         }
     }
-
-    .quick__services{
-
-        gap: 5px;
-
-        .item{
-            width: calc(25% - 5px);
-            height: 280px;
-            background-color: #c61c39;
-            background-color: #3a5a40;
-            color: #fff;
-            padding: 50px;
-            border: 1px solid #eee;
-            font-weight: 600;
-            text-transform: capitalize;
-            text-align: center;
-            line-height: 24px;
-            cursor: pointer;
-            overflow: hidden;
-
-            .crown{
-
-                height: 140px;
-                gap: 25px;
-                
-
-                .relative{
-                    font-family: "Bebas Neue" !important;
-                    font-size: 26px;
-                    line-height: 28px;
-                    text-align: center;
-                }
-            }
-
-            .popCircle{
-                width: 0px;
-                height: 0px;
-                background-color: #f0ead2;
-                border-radius: 50%;
-                transition: all .8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-                opacity: 0;
-            }
-
-            &:hover{
-                color: #1b1b1b;
-
-                .popCircle{
-                    width: 500px;
-                    height: 500px;
-                    opacity: 1;
-                }
-
-                .icon{
-                    color: #c90526;
-                    color: #3a5a40;
-                }
-            }
-
-            .icon{
-                font-size: 30px;
-            }
-        }
-    }
-    
 }
 
 .imageHomeSide{
@@ -106,22 +64,26 @@
 }
 
 .about__short{
-    margin: 80px auto;
-    background-color: #fcfaf2;
-    max-width: 1730px;
-    overflow-x: hidden;
+    background-color: #fff;
+    justify-content: space-between;
+    padding-top: 50px;
+}
+
+.image__standard{
+    width: 46%;
+    min-width: 600px;
+    overflow: hidden;
 }
 
 .about__quick__content{
-    width: 50%;
-    padding: 50px;
-    padding-left: 70px;
+    width: 48%;
 }
 
 .lh{
-    line-height: 45px;
-    font-size: 35px;
+    line-height: 50px;
+    font-size: 45px;
     margin-bottom: 50px;
+    width: 80%;
 }
 
 .image__icon{
@@ -135,11 +97,14 @@
 }
 
 .divider{
-    margin: 25px 0;
+    margin: 8zpx 0;
     width: 100%;
     height: 1px;
-    background-color: #e4e4e4;
-    margin-top: 25px;
+}
+
+.mission__quick{
+    background-color: #f9f9f9;
+    padding: 30px;
 }
 
 .serve{
@@ -152,7 +117,8 @@
 
 .videoHolder{
     width: 450px;
-    margin-top: 0px;
+    margin-top: 30px;
+    display: none;
 
     img{
         width: 100%;
@@ -161,7 +127,8 @@
 }
 
 .socials__comp{
-    padding: 10px 0;
+    padding: 0px 0;
+    margin-top: 20px;
 
     .youtube__player__seth{
 
@@ -173,15 +140,69 @@
         }
 
         p{
-            font-family: "Bebas Neue" !important;
-            font-size: 35px !important;
-            margin-bottom: 40px;
+            font-size: 28px;
+            margin-bottom: 50px;
+            font-weight: 600;
+        }
+    }
 
-            span{
-                color: #fb8b24;
-                font-family: "Bebas Neue" !important;
+}
+
+
+.programmes{
+    background-color: #f9f9f9;
+    padding: 30px 0px;
+
+    .programme__parent{
+
+        overflow-x: auto;
+        scrollbar-width: none;
+
+        .programme__item{
+            min-width: 800px;
+            height: 400px;
+            background-color: #fff;
+            border-radius: 10px;
+            overflow: hidden;
+
+            img{
+                width: 100%;
+            }
+            
+            &:first-child{
+                margin-left: 10%;
+            }
+
+            &:last-child{
+                margin-right: 10%;
             }
         }
+
+    }
+}
+
+
+
+@media (max-width : 1440px) {
+
+    .homepage{
+        .vidMate{
+            height: 700px;
+            overflow: hidden;
+            position: absolute;
+            width: 1000px;
+            right: -50px;
+            rotate: -30deg;
+            z-index: -1;
+            top: 00px;
+    
+            video{
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
+    
     }
 
 }
