--- a/src/components/newsroom/newsroom.scss
+++ b/src/components/newsroom/newsroom.scss
@@ -1,13 +1,17 @@
 .blog{
+    font-size: 21px;
     font-weight: 600;
-    font-size: 28px;
-    
+    color: #1c3f3a;
 }
 
 .news{
 
-    margin-top: 40px;
     gap: 30px;
+    padding-top: 0px;
+    margin-bottom: 20px;
+    scrollbar-width: none;
+    overflow-x: auto;
+    
 
     &#main{
         
@@ -25,9 +29,6 @@
                     height: max-content;
                     margin-bottom: 0;
                 }
-                a{
-                    display: none;
-                }
             }
 
             &:hover{
@@ -44,15 +45,13 @@
 
     .news__item{
 
-        width: 370px;
-        min-width: 370px;
-        background-color: #fff;
-        box-shadow: 2px 3px 20px rgba($color: #000000, $alpha: .05);
-        border-radius: 7px;
+        width: 320px;
+        min-width: 320px;
         // border: 1px solid #eee;
         overflow: hidden;
         padding-bottom: 20px;
         cursor: pointer;
+        color: #000;
 
         &:hover{
 
@@ -65,16 +64,16 @@
         }
 
         a{
-            color: #108a00;
+            color: #777;
             letter-spacing: 2px;
             text-transform: uppercase;
-            font-size: 12px;
+            font-size: 11px;
             font-weight: 600;
             display: flex;
             align-items: center;
             gap: 5px;
-            margin-top: 25px;
-            font-weight: 700;
+            margin-bottom: 10px;
+            font-weight: 500;
             transition: all .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 
             &:hover{
@@ -84,7 +83,7 @@
 
         .photo{
             width: 100%;
-            height: 200px;
+            height: 220px;
             overflow: hidden;
 
             img{
@@ -96,40 +95,191 @@
         }
 
         .content__text{
-            margin-top: 10px;
-            padding: 10px 25px;
+
+            margin-top: 25px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            .published{
+                text-transform: uppercase;
+                font-size: 11px;
+                letter-spacing: 2px;
+                color: #555;
+            }
 
             p{
-                line-height: 23px;
-                margin-bottom: 15px;
-                height: 65px;
+                line-height: 24px;
+                font-size: 15px;
             }
         }
     }
 }
 
 .newsroom{
-    padding-bottom: 80px;
+    padding: 40px 0;
     overflow-x: hidden;
+    background-color: #f9f9f9;
+    padding-bottom: 0;
+
+    .tag__title{
+        margin-bottom: 40px;
+    }
 }
 
 .controls__btn{
 
     width: 50px;
     height: 50px;
-    border-radius: 5px;
+    // border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
 
     &.prev{
         background-color: #ebf1ec;
-        color: #3a5a40;
+        color: #1C3F3A;
     }
 
     &.next{
-        background-color: #3a5a40;
+        background-color: #1C3F3A;
         color: #fff;
+    }
+
+}
+
+//view news
+
+.view__news{
+
+    display: flex;
+    gap: 50px;
+    justify-content: space-between;
+
+    .read__news{
+        width: 60%;
+        margin-top: 50px;
+
+        .headline{
+
+            font-size: 40px;
+            font-weight: 600;
+            line-height: 50px;
+            margin-bottom: 40px;
+
+            p{
+                font-size: 11px;
+                text-transform: uppercase;
+                letter-spacing: 2px;
+                font-weight: 500;
+                color: #777;
+                margin-bottom: 10px;
+            }
+
+        }
+
+        .news__photo{
+
+            width: 100%;
+            height: 400px;
+            margin-bottom: 40px;
+            overflow: hidden;
+            border-radius: 10px;
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: top;
+            }
+        }
+
+        .news__body{
+            text-align: justify;
+            line-height: 25px;
+            padding-bottom: 100px;
+        }
+    }
+    
+    .other__news{
+        width: 35%;
+        background-color: #131313;
+        color: #fff;
+        padding: 30px;
+
+        .tiptop{
+
+            font-size: 21px;
+            font-weight: 600;
+            margin-bottom: 30px;
+        }
+
+        .newp{
+
+            display: flex;
+            align-items: center;
+            border-bottom: 1px solid rgba($color: #fff, $alpha: .1);
+            padding-bottom: 20px;
+            cursor: pointer;
+            margin-bottom: 20px;
+            gap: 20px;
+
+            &:last-child{
+                border: none;
+            }
+
+            &:hover{
+                .content{
+
+                    p{
+                        text-decoration: underline;
+                    }
+                }
+
+                .imag{
+                    img{
+                        scale: 1.09;
+                    }
+                }
+            }
+
+            .content{
+                width: 100%;
+                font-size: 14px;
+                display: flex;
+                flex-direction: column;
+                line-height: 21px;
+                font-weight: 600;
+                gap: 20px;
+                
+                p{
+                    transition: all 0.8s cubic-bezier(0.39, 0.01, 0.36, 0.9);
+                }
+
+                span{
+                    text-transform: uppercase;
+                    letter-spacing: 2px;
+                    font-size: 10px;
+                    font-weight: 400;
+                }
+            }
+
+            .imag{
+                width: 130px;
+                height: 130px;
+                background-color: #000;
+                flex-shrink: 0;
+                overflow: hidden;
+
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    transition: all 0.8s cubic-bezier(0.39, 0.01, 0.36, 0.9);
+                }
+            }
+
+        }
     }
 
 }
