--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -59,8 +59,6 @@
     }
 
     .more__about{
-        // border-top: 1px solid #dfdfdf;
-        // border-bottom: 1px solid #dfdfdf;
         margin: 20px 0;
     }
 
@@ -269,4 +267,399 @@
 
     }
 
+}
+
+@media(max-width : 1000px){
+
+    .title{
+        padding: 40px 0px;
+        gap: 40px;
+    
+        h1{
+            font-size: 40px;
+            line-height: 50px;
+        }
+    
+        span{
+            font-size: 18px;
+            width: 60%;
+            line-height: 28px;
+        }
+    }
+
+    .about{
+
+        .more__about{
+            margin: 20px 0;
+        }
+
+        .areas{
+
+            // justify-content: center;
+            background-color: transparent;
+            // flex-wrap: wrap;
+            gap: 10px;
+            overflow: hidden;
+            overflow-x: auto;
+            scrollbar-width: none;
+            border-radius: 0;
+    
+            .lineform{
+                display: none;
+            }
+    
+            .scope{
+    
+                min-width: 320px;
+                padding: 30px 0;
+                background-color: #108a00;
+    
+            }
+        }
+
+        .floating__pictures{
+    
+            .photo__float{
+    
+                height: 200px;
+    
+            }
+    
+        }
+        
+        .structures{
+    
+            background-color: #f9f9f9;
+            color: #000;
+            margin: 0px 0;
+            overflow-x: clip;
+    
+            .flex{
+    
+                position: relative;
+                align-items: center;
+                justify-content: center;
+    
+                .txt__content{
+    
+                    width: 450px;
+                    padding: 80px 0;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+    
+                    .main{
+                        font-size: 30px;
+                        font-weight: 600;
+                        margin-bottom: 40px;
+                        text-align: center;
+                    }
+    
+                    .sub__text{
+                        line-height: 25px;
+                        text-align: justify;
+                        margin-bottom: 50px;
+                    }
+                }
+    
+                .photo{
+                    display: none;
+                }
+            }
+           
+        }
+
+        .organ{
+            padding: 50px 0;
+            padding-bottom: 0;
+
+            .trace{
+                .main{
+                    font-size: 30px;
+                    font-weight: 600;
+                    margin-bottom: 30px;
+                }
+    
+                .photo{
+                    width: 100%;
+                    overflow: hidden;
+    
+                    img{
+                        width: 100%;
+                    }
+                }
+            }
+        }
+    }
+
+    .about__sections{
+
+        .holder{
+    
+            background-color: #fff;
+            text-align: justify;
+            margin: 0 auto;
+            margin-top: 40px;
+    
+            .mda__head{
+    
+                .mda__info{
+    
+                    .lead{
+                        font-size: 21px;
+                        font-weight: 600;
+                        margin-bottom: 20px;
+                        text-align: center;
+                        color: #108a00;
+                    }
+    
+                    .backups{
+                        line-height: 28px;
+                        font-size: 17px;
+                        font-weight: 500;
+                    }
+                }
+    
+            }
+    
+            .mda__content{
+    
+                font-size: 17px;
+                display: flex;
+                flex-direction: column;
+                gap: 25px;
+                line-height: 27px;
+                padding: 50px 0;
+                font-weight: 500;
+            }
+    
+        }
+    
+    }
+
+}   
+
+@media(max-width : 768px){
+
+    .title{
+        padding: 40px 0px;
+        gap: 40px;
+    
+        span{
+            font-size: 18px;
+            width: 80%;
+            line-height: 28px;
+        }
+    }
+
+}   
+
+@media(max-width : 720px){
+
+    .about{
+
+        .areas{
+
+            justify-content: center;
+            background-color: transparent;
+            flex-wrap: wrap;
+            gap: 10px;
+    
+            .lineform{
+                display: none;
+            }
+    
+            .scope{
+    
+                width: 100%;
+                padding: 30px 0;
+                background-color: #108a00;
+    
+            }
+        }
+
+        .floating__pictures{
+    
+            .photo__float{
+    
+                height: 200px;
+    
+            }
+    
+        }
+    }
+
+}   
+
+@media(max-width : 500px){
+
+    .title{
+        padding: 35px 0px;
+        gap: 30px;
+    
+        h1{
+            font-size: 32px;
+            line-height: 40px;
+        }
+    
+        span{
+            font-size: 16px;
+            width: 100%;
+            line-height: 26px;
+        }
+    }
+
+    .about{
+
+        .more__about{
+            margin: 10px 0;
+        }
+
+        .areas{
+
+            justify-content: center;
+            background-color: transparent;
+            flex-wrap: wrap;
+            gap: 10px;
+    
+            .lineform{
+                display: none;
+            }
+    
+            .scope{
+    
+                width: 100%;
+                padding: 30px 0;
+                background-color: #108a00;
+
+                .content__text{
+    
+                    .tag{
+                        margin: 20px 0;
+                        margin-top: 10px;
+                        font-size: 11px;
+                    }
+    
+                    .main{
+                        font-size: 13px;
+                        letter-spacing: 2px;
+                        font-weight: 600;
+                        text-transform: uppercase;
+                    }
+    
+                    .sub__text{
+                        font-size: 16px;
+                        width: 80%;
+                        line-height: 23px;
+                        text-align: center;
+                    }
+                }
+    
+            }
+        }
+
+        .floating__pictures{
+
+            align-items: center;
+            gap: 10px;
+    
+            .photo__float{
+    
+                height: 150px;
+                min-width: 250px;
+    
+            }
+    
+        }
+        
+        .structures{
+    
+            background-color: #f9f9f9;
+            color: #000;
+            margin: 0px 0;
+            overflow-x: clip;
+    
+            .flex{
+    
+                position: relative;
+                align-items: center;
+                justify-content: center;
+    
+                .txt__content{
+    
+                    width: 450px;
+                    padding: 50px 0;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+
+                    .tag{
+                        margin-bottom: 10px;
+                        font-size: 11px;
+                    }
+    
+                    .main{
+                        font-size: 21px;
+                        font-weight: 600;
+                        margin-bottom: 30px;
+                        text-align: center;
+                    }
+    
+                    .sub__text{
+                        line-height: 24px;
+                        text-align: justify;
+                        font-size: 15px;
+                        margin-bottom: 40px;
+                    }
+                }
+    
+                .photo{
+                    display: none;
+                }
+            }
+           
+        }
+
+        .organ{
+            padding: 30px 0;
+            padding-bottom: 0;
+
+            .trace{
+                .main{
+                    font-size: 21px;
+                    font-weight: 600;
+                    margin-bottom: 20px;
+                }
+    
+                .photo{
+                    width: 100%;
+                    overflow: hidden;
+    
+                    img{
+                        width: 100%;
+                    }
+                }
+            }
+        }
+    }
+
+
+} 
+
+.iconHolder{
+    background-color: #ebf1ec;
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    flex-shrink: 0;
+}
+
+#agency{
+    margin: 40px 0;
 }
