--- a/src/admin/pages/pages.scss
+++ b/src/admin/pages/pages.scss
@@ -158,6 +158,10 @@
             &.people__zone{
                 margin-top: 0px;
             }
+
+            &.docForm{
+                margin-top: 40px;
+            }
             
             .form__child{
 
@@ -296,6 +300,10 @@
             width: 100%;
             align-items: center;
 
+            &.res__file{
+                justify-content: space-between;
+            }
+
             .ofiicial__name{
 
                 align-items: center;
@@ -303,10 +311,9 @@
 
                 .official__image{
                     
-                    width: 40px;
-                    height: 40px;
+                    width: 30px;
+                    height: 30px;
                     overflow: clip;
-                    border-radius: 50%;
 
                     img{
                         width: 100%;
@@ -342,6 +349,18 @@
             gap: 15px;
             font-size: 14px;
             cursor: pointer;
+
+            &.res__file__sub{
+                width: max-content;
+            }
+
+            a{
+                background-color: #e8f1e8;
+                color: green;
+                font-weight: 600;
+                padding: 12px 22px;
+                border-radius: 3px;
+            }
 
             .action{
                 height: 30px;
